--- a/locales/es-ES.resx
+++ b/locales/es-ES.resx
@@ -287,4 +287,7 @@ Si no confías en nosotros, puedes garantizar tu seguridad eliminando los permis
   <data name="settings_QuoteDoNot_Extract_name">
     <value>No despliegue retweets de citas</value>
   </data>
+  <data name="reload">
+    <value>recargar</value>
+  </data>
 </root>
