--- a/locales/pt-BR.resx
+++ b/locales/pt-BR.resx
@@ -287,4 +287,7 @@ Se não confia em nós, pode garantir a sua segurança removendo as suas permiss
   <data name="settings_QuoteDoNot_Extract_name">
     <value>Não implementar retweets de citações</value>
   </data>
+  <data name="reload">
+    <value>recarregar</value>
+  </data>
 </root>
