--- a/locales/zh-CN.resx
+++ b/locales/zh-CN.resx
@@ -287,4 +287,7 @@
   <data name="settings_QuoteDoNot_Extract_name">
     <value>不要部署引用转发</value>
   </data>
+  <data name="reload">
+    <value>重新加载</value>
+  </data>
 </root>
